--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,6 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/build/")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/")
 
 
+add_subdirectory (src/prm)
 add_subdirectory (src/tests/astar)
 
