--- a/src/drawapp/CMakeLists.txt
+++ b/src/drawapp/CMakeLists.txt
@@ -15,5 +15,6 @@ add_executable(
 
 TARGET_LINK_LIBRARIES(drawapp drawstuff)
 TARGET_LINK_LIBRARIES(drawapp prmcollision)
+TARGET_LINK_LIBRARIES(drawapp prm)
 TARGET_LINK_LIBRARIES(drawapp PQP)
 TARGET_LINK_LIBRARIES(drawapp ${OPENGL_LIBRARIES})
