--- a/src/prm/CMakeLists.txt
+++ b/src/prm/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 2.6)
 include_directories("${PROJECT_SOURCE_DIR}/include")
 include_directories("${PROJECT_SOURCE_DIR}")
 include_directories("${PROJECT_SOURCE_DIR}/src")
+include_directories("${SRC_DIR})
+include_directories("${SRC_TOOLS_DIR})
 include_directories("${PQP_INCLUDE_DIR}")
 include_directories("${EIGEN3_INCLUDE_DIR}")
 
@@ -21,6 +23,8 @@ set(SOURCES
     LocalPlanner.cpp
     Generator.h
     Generator.cpp
+        ${SRC_TOOLS_DIR}/MatrixDefs.h ${SRC_TOOLS_DIR}/MatrixDefs.cpp
+        ${SRC_TOOLS_DIR}/MatrixDefsInternal.h
 )
 
 add_library(prm ${SOURCES})
