at least it copiles

--- a/src/equilibrium/CMakeLists.txt
+++ b/src/equilibrium/CMakeLists.txt
@@ -27,7 +27,7 @@ LINK_DIRECTORIES(${CDD_LIBRARY_DIR})
 add_library(equilibrium ${SOURCES})
 
 TARGET_LINK_LIBRARIES(equilibrium PQP)
-TARGET_LINK_LIBRARIES(equilibrium CDD)
+TARGET_LINK_LIBRARIES(equilibrium ${CDD_LIBRARY})
 
 SET_TARGET_PROPERTIES(equilibrium PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 SET_TARGET_PROPERTIES(equilibrium PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
