--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,12 +22,14 @@ endif ()
 
 find_package(OpenGL REQUIRED)
 find_package(PQP REQUIRED)
+find_package(CDD REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(DrawStuff REQUIRED)
 
 add_subdirectory (src/prm)
 add_subdirectory (src/collision)
 add_subdirectory (src/equilibrium)
+add_subdirectory (src/tests/equilibrium)
 add_subdirectory (src/tests/astar)
 add_subdirectory (src/tests/prmcollisiontests)
 add_subdirectory (src/drawapp)
