framework for loading robot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(Eigen3 REQUIRED)
 find_package(DrawStuff REQUIRED)
 
 add_subdirectory (src/prm)
+add_subdirectory (src/prmpath)
 add_subdirectory (src/collision)
 add_subdirectory (src/equilibrium)
 add_subdirectory (src/tests/equilibrium)
