node not working

--- a/src/prmpath/CMakeLists.txt
+++ b/src/prmpath/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SOURCES
     Robot.cpp
     ${SRC_DIR}/../include/kinematics/joint.h
     ${SRC_DIR}/../include/kinematics/joint_io.h
+    ${SRC_DIR}/../include/kinematics/joint_io_urdf.h
     ${SRC_DIR}/../include/kinematics/Pi.h
         ${SRC_TOOLS_DIR}/MatrixDefs.h ${SRC_TOOLS_DIR}/MatrixDefs.cpp
         ${SRC_TOOLS_DIR}/MatrixDefsInternal.h
