added jacobian and samples

--- a/src/prmpath/CMakeLists.txt
+++ b/src/prmpath/CMakeLists.txt
@@ -19,6 +19,10 @@ endif ( MSVC )
 set(SOURCES
     Robot.h
     Robot.cpp
+    Jacobian.h
+    Jacobian.cpp
+    sampling/Sample.h
+    sampling/Sample.cpp
         ${SRC_TOOLS_DIR}/MatrixDefs.h ${SRC_TOOLS_DIR}/MatrixDefs.cpp
         ${SRC_TOOLS_DIR}/MatrixDefsInternal.h
 )
