--- a/src/drawapp/CMakeLists.txt
+++ b/src/drawapp/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.6)
 include_directories("${PROJECT_SOURCE_DIR}/include")
 include_directories("${DRAWSTUFF_INCLUDE_DIR}")
 include_directories("${SRC_DIR}")
+include_directories("${SRC_TOOLS_DIR}")
 include_directories("${PQP_INCLUDE_DIR}")
 include_directories("${EIGEN3_INCLUDE_DIR}")
 
@@ -12,6 +13,7 @@ LINK_DIRECTORIES(${PQP_LIBRARY_DIR})
 add_executable(
         drawapp
         Main.cpp
+		${SRC_TOOLS_DIR}/Timer.h ${SRC_TOOLS_DIR}/Timer.cpp
 )
 
 TARGET_LINK_LIBRARIES(drawapp drawstuff)
