truck scenario + ik obstacle avoidance

--- a/src/drawapp/CMakeLists.txt
+++ b/src/drawapp/CMakeLists.txt
@@ -21,4 +21,5 @@ TARGET_LINK_LIBRARIES(drawapp prmcollision)
 TARGET_LINK_LIBRARIES(drawapp prm)
 TARGET_LINK_LIBRARIES(drawapp prmpath)
 TARGET_LINK_LIBRARIES(drawapp PQP)
+TARGET_LINK_LIBRARIES(drawapp equilibrium)
 TARGET_LINK_LIBRARIES(drawapp ${OPENGL_LIBRARIES})
