managed to generate spline

--- a/src/prmpath/CMakeLists.txt
+++ b/src/prmpath/CMakeLists.txt
@@ -38,10 +38,15 @@ set(SOURCES
     Export/BVHExporter.h Export/BVHExporter.cpp
     Export/FileHandler.h Export/FileHandler.cpp
     ik/IKSolver.h ik/IKSolver.cpp
+    smoothing/smooth.h smoothing/smooth.cpp
     ik/PartialDerivativeConstraint.h ik/PartialDerivativeConstraint.cpp
     ik/VectorAlignmentConstraint.h ik/VectorAlignmentConstraint.cpp
     ik/ForceManipulabilityConstraint.h ik/ForceManipulabilityConstraint.cpp
     ik/ObstacleAvoidanceConstraint.h ik/ObstacleAvoidanceConstraint.cpp
+        ${SRC_DIR}/../include/spline/curve_abc.h
+        ${SRC_DIR}/../include/spline/cubic_function.h
+        ${SRC_DIR}/../include/spline/bezier_curve.h
+        ${SRC_DIR}/../include/spline/exact_cubic.h
         ${SRC_TOOLS_DIR}/MatrixDefs.h ${SRC_TOOLS_DIR}/MatrixDefs.cpp
         ${SRC_TOOLS_DIR}/MatrixDefsInternal.h
 )
