ongoing bvh_to_urf_compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,4 +43,5 @@ add_subdirectory (src/tests/astar)
 add_subdirectory (src/tests/prmcollisiontests)
 add_subdirectory (src/drawapp)
 add_subdirectory (src/generateEffectorRom)
+add_subdirectory (src/bvh_to_urdf)
 
