--- a/src/collision/CMakeLists.txt
+++ b/src/collision/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
 
 include_directories("${PROJECT_SOURCE_DIR}/include")
-include_directories("${SRC_DIR})
-include_directories("${SRC_TOOLS_DIR})
+include_directories("${SRC_DIR}")
+include_directories("${SRC_TOOLS_DIR}")
 include_directories("${PQP_INCLUDE_DIR}")
 include_directories("${EIGEN3_INCLUDE_DIR}")
 
