--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,5 +42,6 @@ add_subdirectory (src/tests/equilibrium)
 add_subdirectory (src/tests/astar)
 add_subdirectory (src/tests/prmcollisiontests)
 add_subdirectory (src/drawapp)
+add_subdirectory (src/rejection)
 add_subdirectory (src/generateEffectorRom)
 
