--- a/src/drawapp/CMakeLists.txt
+++ b/src/drawapp/CMakeLists.txt
@@ -22,4 +22,5 @@ TARGET_LINK_LIBRARIES(drawapp prm)
 TARGET_LINK_LIBRARIES(drawapp prmpath)
 TARGET_LINK_LIBRARIES(drawapp PQP)
 TARGET_LINK_LIBRARIES(drawapp equilibrium)
+TARGET_LINK_LIBRARIES(drawapp retarget)
 TARGET_LINK_LIBRARIES(drawapp ${OPENGL_LIBRARIES})
