--- a/src/drawapp/CMakeLists.txt
+++ b/src/drawapp/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
 
+
+find_package(DrawStuff REQUIRED)
+
 include_directories("${PROJECT_SOURCE_DIR}/include")
 include_directories("${DRAWSTUFF_INCLUDE_DIR}")
 include_directories("${SRC_DIR}")
@@ -21,6 +24,5 @@ TARGET_LINK_LIBRARIES(drawapp prmcollision)
 TARGET_LINK_LIBRARIES(drawapp prm)
 TARGET_LINK_LIBRARIES(drawapp prmpath)
 TARGET_LINK_LIBRARIES(drawapp PQP)
-TARGET_LINK_LIBRARIES(drawapp equilibrium)
 TARGET_LINK_LIBRARIES(drawapp retarget)
 TARGET_LINK_LIBRARIES(drawapp ${OPENGL_LIBRARIES})
